getting up to snuff

--- a/Contact.html
+++ b/Contact.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="hollywoodstylehacking.css">
+<style>
+ul {
+	list-style-type: none;
+	margin:0;
+	padding:0;
+}
+li {
+	float:left;
+	display:block;
+	width:50px;
+}
+</style>
 <title>Conact</title>
 </head>
 <body>
+<h1 id="head1">Contact</h1>
+<h2>Navigation</h2>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="tours.html">Tours</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+<footer id="footer">
+<p>Copyright: something.com</p>
+</footer>
 </body>
 </html>
