--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ li {
 </style>
 </head>
 <body>
-<div id="head1">
-<h1>Hollywood Style Hacking</h1>
-</div>
+<h1 id="head1">Hollywood Style Hacking</h1>
 <h2>Navigation</h2>
 <ul>
 <li><a href="index.html">Home</a></li>
@@ -27,8 +25,8 @@ li {
 <li><a href="contact.html">Contact</li></a>
 </ul>
 <br><p>We are only technically possible.</p>
-<div id="footer">
+<footer id="footer">
 Copyright: something.com
-</div>
+</footer>
 </body>
 </html>
