--- a/Contact.html
+++ b/Contact.html
@@ -23,9 +23,11 @@ li {
 <li><a href="index.html">Home</a></li>
 <li><a href="tours.html">Tours</a></li>
 <li><a href="contact.html">Contact</a></li>
-</ul>
-<footer id="footer">
-<p>Copyright: something.com</p>
-</footer>
+</ul><br>
+<h1>Contact the band!</h1><hr>
+<ul>
+<li><pre>PO Box 0.08</pre></li>
+<li>317-555-0555</li>
+<li>HSH@gmail.ch</li>
 </body>
 </html>
