clean up and normalization

--- a/Contact.html
+++ b/Contact.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="hollywoodstylehacking.css">
-<style>
-ul {
-	list-style-type: none;
-	margin:0;
-	padding:0;
-}
-li {
-	float:left;
-	display:block;
-	width:50px;
-}
-</style>
-<title>Conact</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="hollywoodstylehacking.css">
+	<title>Conact</title>
 </head>
 <body>
-<h1 id="head1">Contact</h1>
-<h2>Navigation</h2>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="tours.html">Tours</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul><br>
-<h1>Contact the band!</h1><hr>
-<ul>
-<li><pre>PO Box 0.08</pre></li>
-<li>317-555-0555</li>
-<li>HSH@gmail.ch</li>
+	<div id="wrapper">
+		<h1 id="head1">Contact</h1>
+		<h2>Navigation</h2>
+		<nav>
+			<a href="index.html">Home</a>
+			<a href="tours.html">Tours</a>
+			<a class="active" href="contact.html">Contact</a>
+		</nav>
+		<main>
+			<table id="tb2">
+				<tr>
+					<th> Guy Fawkes </th>
+					<th> Guy Ritchie </th>
+					<th> Guy Fieri </th>
+					<th> Buddy Guy </th>
+				</tr>
+				<tr>
+					<td><a href="mailto:incolorstudios@gmail.com"> HSHacker<br>@fake.com </a></td>
+					<td><a href="mailto:incolorstudios@gmail.com"> RitchGuy<br>@fake.com </a></td>
+					<td><a href="mailto:incolorstudios@gmail.com"> FieryGuy<br>@fake.com </a></td>
+					<td><a href="mailto:incolorstudios@gmail.com"> NotYourBuddyGuy<br>@fake.com </a></td>
+				</tr>
+				<tr>
+					<td> PO Box 5000 </td>
+					<td> PO Box 42 </td>
+					<td> PO Box 101 </td>
+					<td> PO Box 1011 </td>
+				</tr>
+				<tr>
+					<td> 317-555-5555 </td>
+					<td> 317-555-5556 </td>
+					<td> 317-555-3473 </td>
+					<td> 317-555-5557 </td>
+				</tr>
+			</table>
+		</main>
+		<img id="image" src="hackerguy.jpg" alt="Hacker Guy">
+		<footer>
+			<p>Copyright: something.com</p>
+		</footer>
+	</div>
 </body>
 </html>
