--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="hollywoodstylehacking.css">
 <title>Hollywood Style Hacking</title>
-<style>
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-li {
-	float: left;
-	display: block;
-	width: 50px;
-}
-</style>
 </head>
 <body>
-<h1 id="head1">Hollywood Style Hacking</h1>
-<h2>Navigation</h2>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="tours.html">Tours</a></li>
-<li><a href="contact.html">Contact</li></a>
-</ul>
-<br><p>We are only technically possible.</p>
-<footer id="footer">
-Copyright: something.com
-</footer>
+	<div id="wrapper">
+		<h1 id="head1">Hollywood Style Hacking</h1>
+		<h2>Navigation</h2>
+		<nav>
+			<a class="active" href="index.html">Home</a>
+			<a href="tours.html">Tours</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+		<main id ="frontpage">
+			<p>We are only technically possible.</p>
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra, arcu posuere tempor tristique, nulla nunc scelerisque eros, scelerisque cursus nisl lacus quis diam. Donec interdum ipsum id volutpat tristique. Duis fermentum elementum porta. Pellentesque vitae feugiat magna. Donec sit amet ultrices augue. Curabitur vehicula, nisl et tincidunt faucibus, risus tellus sollicitudin velit, id eleifend ligula mauris vitae neque. Fusce euismod eleifend condimentum. Morbi bibendum justo urna, vel ultrices eros aliquam vitae. In in faucibus neque, non eleifend nisl. Quisque nec massa scelerisque, luctus est eu, lobortis tortor. Cras in aliquam sapien. Phasellus dui erat, iaculis eget sodales vestibulum, aliquam ac est. Duis ac semper magna. Morbi id turpis accumsan, maximus diam non, ullamcorper arcu. Mauris hendrerit massa nec nunc accumsan, sollicitudin fermentum velit aliquet. Vivamus nec nulla vulputate, interdum odio nec, varius enim. </p>
+		</main>
+		<img id="image" src="hackerguy.jpg" alt="Hacker Guy">
+		<footer>
+			Copyright: something.com
+		</footer>
+	</div>
 </body>
 </html>
