--- a/Tours.html
+++ b/Tours.html
@@ -1,61 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="hollywoodstylehacking.css">
-<style>
-ul {
-	list-style-type: none;
-	margin:0;
-	padding:0;
-}
-li {
-	float:left;
-	display:block;
-	width:50px;
-}
-td {
-	text-align: center;
-}
-table {
-	font-weight: bold;
-}
-</style>
 <title>Tours : Hollywood Style Hacking</title>
 </head>
 <body>
-<h1 id="head1">Tours</h1>
-<h2>Navigation</h2>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="tours.html">Tours</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul><br>
-<div id="table1">
-<table style="width:100%">
-<tr>
-<th>Date</th>
-<th>Venue</th>
-<th>City</th>
-</tr>
-<tr>
-<td>July 50th</td>
-<td><a href="https://www.google.com/maps/place/Melody+Inn/@39.8256075,-86.1595157,17z/data=!3m1!4b1!4m2!3m1!1s0x886b515cad96db57:0x7e1a176affe7114a?hl=en" target="_blank">The Melody Inn</a></td>
-<td>Indianapolis, IN</td>
-</tr>
-<tr>
-<td>August 3</td>
-<td><a href="https://www.google.com/maps/place/Hummel+Park/@39.6843005,-86.3917204,17z/data=!3m1!4b1!4m2!3m1!1s0x886ca49bf3c20cd9:0x9f9526bf295d862e?hl=en" target="_blank">Hummel Park</a></td>
-<td>Plainfield, IN</td>
-</tr>
-<tr>
-<td>September-ish</td>
-<td><a href="https://www.google.com/maps/@39.619568,-86.3540739,356m/data=!3m1!1e3?hl=en" target="_blank">Flooded Retention Pond</a></td>
-<td>Mooresville, IN</td>
-</tr>
-</table>
-</div>
-<footer id="footer">
-<p>Copyright: something.com</p>
-</footer>
+	<div id="wrapper">
+		<h1 id="head1">Tours</h1>
+		<h2>Navigation</h2>
+		<nav>
+			<a href="index.html">Home</a>
+			<a class="active" href="tours.html">Tours</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+		<main>
+			<div id="table1">
+				<table>
+					<tr>
+						<th>Date</th>
+						<th>Venue</th>
+						<th>City</th>
+					</tr>
+					<tr>
+						<td>July 50th</td>
+						<td><a href="https://www.google.com/maps/place/Melody+Inn/@39.8256075,-86.1595157,17z/data=!3m1!4b1!4m2!3m1!1s0x886b515cad96db57:0x7e1a176affe7114a?hl=en" target="_blank">The Melody Inn</a></td>
+						<td>Indianapolis, IN</td>
+					</tr>
+					<tr>
+						<td>August 3</td>
+						<td><a href="https://www.google.com/maps/place/Hummel+Park/@39.6843005,-86.3917204,17z/data=!3m1!4b1!4m2!3m1!1s0x886ca49bf3c20cd9:0x9f9526bf295d862e?hl=en" target="_blank">Hummel Park</a></td>
+						<td>Plainfield, IN</td>
+					</tr>
+					<tr>
+						<td>September-ish</td>
+						<td><a href="https://www.google.com/maps/@39.619568,-86.3540739,356m/data=!3m1!1e3?hl=en" target="_blank">Flooded Retention Pond</a></td>
+						<td>Mooresville, IN</td>
+					</tr>
+				</table>
+			</div>
+		</main>
+		<img id="image" src="hackerguy.jpg" alt="Hacker Guy">
+		<footer>
+			<p>Copyright: something.com</p>
+		</footer>
+	</div> <!-- /wrapper -->
 </body>
 </html>
