Buttons and refactoring

--- a/Contact.html
+++ b/Contact.html
@@ -17,28 +17,28 @@
 		<main>
 			<table id="tb2">
 				<tr>
-					<th> Guy Fawkes </th>
-					<th> Guy Ritchie </th>
-					<th> Guy Fieri </th>
-					<th> Buddy Guy </th>
+					<th>Guy Fawkes</th>
+					<th>Guy Ritchie</th>
+					<th>Guy Fieri</th>
+					<th>Buddy Guy</th>
 				</tr>
 				<tr>
-					<td><a href="mailto:incolorstudios@gmail.com"> HSHacker<br>@fake.com </a></td>
-					<td><a href="mailto:incolorstudios@gmail.com"> RitchGuy<br>@fake.com </a></td>
-					<td><a href="mailto:incolorstudios@gmail.com"> FieryGuy<br>@fake.com </a></td>
-					<td><a href="mailto:incolorstudios@gmail.com"> NotYourBuddyGuy<br>@fake.com </a></td>
+					<td><a href="mailto:incolorstudios@gmail.com">HSHacker<br>@fake.com</a></td>
+					<td><a href="mailto:incolorstudios@gmail.com">RitchGuy<br>@fake.com</a></td>
+					<td><a href="mailto:incolorstudios@gmail.com">FieryGuy<br>@fake.com</a></td>
+					<td><a href="mailto:incolorstudios@gmail.com">NotYourBuddyGuy<br>@fake.com</a></td>
 				</tr>
 				<tr>
-					<td> PO Box 5000 </td>
-					<td> PO Box 42 </td>
-					<td> PO Box 101 </td>
-					<td> PO Box 1011 </td>
+					<td>PO Box 5000</td>
+					<td>PO Box 42</td>
+					<td>PO Box 101</td>
+					<td>PO Box 1011</td>
 				</tr>
 				<tr>
-					<td> 317-555-5555 </td>
-					<td> 317-555-5556 </td>
-					<td> 317-555-3473 </td>
-					<td> 317-555-5557 </td>
+					<td><a href="tel:+13175555555">317-555-5555</td>
+					<td><a href="tel:+13175555555">317-555-5556</td>
+					<td><a href="tel:+13175555555">317-555-3473</td>
+					<td><a href="tel:+13175555557">317-555-5557</td>
 				</tr>
 			</table>
 		</main>
